# codeguard

./: .env.example  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: guardrails.yaml  mcp_servers.yaml
demo/: mechanism_demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  FilePreview.tsx  HITLDialog.tsx  LandingPage.tsx  StepTimeline.tsx
frontend/src/hooks/: useWebSocket.ts
skills/: tdd-workflow.md
src/codeguard/: __init__.py  cli.py  config.py  demo.py  server.py
src/codeguard/agent/: action.py  llm_client.py  loop.py
src/codeguard/credentials/: manager.py
src/codeguard/feedback/: result.py  validators.py
src/codeguard/governance/: audit_log.py  guardrail.py  hitl.py  rules.py  scope_fence.py
src/codeguard/mcp/: adapter.py
src/codeguard/memory/: store.py
src/codeguard/models/: __init__.py  entities.py
src/codeguard/skills/: loader.py
src/codeguard/static/: index.html
src/codeguard/tools/: base.py  (+4 more)
tests/: conftest.py  test_agent_loop.py  test_audit_log.py  test_credential_manager.py  test_demo.py  test_feedback.py  test_file_tools.py  test_guardrail.py  test_guardrail_config.py  test_hitl.py  test_llm_client.py  test_mcp_adapter.py  test_memory.py  test_models.py  test_scope_fence.py  test_server.py  test_shell_tools.py  test_skill_loader.py  test_test_tools.py  test_tool_dispatcher.py
(+7 files in other folders)
